@@ -1,6 +1,0 @@
-Makefile.in
-Makefile
-*~
-*.pyc
-*.pyo
-
