@@ -11360,8 +11360,8 @@
   (c-name gtk_toolbar_append_widget)
   (return-type none)
   (parameter (type-and-name GtkWidget* widget))
-  (parameter (type-and-name const-char* tooltip_text))
-  (parameter (type-and-name const-char* tooltip_private_text))
+  (parameter (type-and-name const-char* tooltip_text) (null-ok))
+  (parameter (type-and-name const-char* tooltip_private_text) (null-ok))
 )
 
 (method prepend_widget
@@ -11369,8 +11369,8 @@
   (c-name gtk_toolbar_prepend_widget)
   (return-type none)
   (parameter (type-and-name GtkWidget* widget))
-  (parameter (type-and-name const-char* tooltip_text))
-  (parameter (type-and-name const-char* tooltip_private_text))
+  (parameter (type-and-name const-char* tooltip_text) (null-ok))
+  (parameter (type-and-name const-char* tooltip_private_text) (null-ok))
 )
 
 (method insert_widget
@@ -11378,8 +11378,8 @@
   (c-name gtk_toolbar_insert_widget)
   (return-type none)
   (parameter (type-and-name GtkWidget* widget))
-  (parameter (type-and-name const-char* tooltip_text))
-  (parameter (type-and-name const-char* tooltip_private_text))
+  (parameter (type-and-name const-char* tooltip_text) (null-ok))
+  (parameter (type-and-name const-char* tooltip_private_text) (null-ok))
   (parameter (type-and-name gint position))
 )
 
