@@ -1,5 +1,13 @@
 2001-03-30  James Henstridge  <james@daa.com.au>
 
+	* examples/pygtk-demo/demos/toolbar.py (main): toolbar demo.
+
+	* examples/pygtk-demo/demos/buttonbox.py (main): add button box
+	demo.
+
+	* examples/pygtk-demo: moved rewritten testgtk demo here, and make
+	changes to account for renamings in gtk.
+
 	* gobjectmodule.c (pygobject_set_property): initialise the GValue
 	to { 0, }, so set_property actually works.
 	(pygobject_get_property): same here.
